<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">移动掌柜</string>
    <string name="network_doctor">"你当前的无线网络可能存在问题，建议你改用GPRS网络。
是否现在去更改设置？"</string>
    <string name="app_copyright">"翊鸿科技公司 版权所有
Copyright © 2012 yihong.
All Rights Reserved."</string>
    <string name="app_exit_confirm_info">你确定要退出么?</string>
    <string name="app_exit_title">退出</string>
    <string name="app_about_title">关于</string>
    <string name="app_contact_us_title">联系我们</string>
    <string name="app_setting_title">设置</string>
    <string name="app_login">用淘宝帐号登录</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_sending">正在发送...</string>
    <string name="app_set">设置</string>
    <string name="app_back">返回</string>
    <string name="app_cancel">取消</string>
    <string name="app_ok">确定</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_continue">继续</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>
    <string name="app_yes">是</string>
    <string name="app_no">否</string>
    <string name="app_down_show_nexttime">下次不提示</string>
    <string name="app_waiting">请稍候...</string>
    <string name="app_loading_data">正在载入数据...</string>
    <string name="app_empty_string" />
    <string name="app_new">new</string>
    <string name="app_download">下载</string>
    <string name="app_install">安装</string>
    <string name="app_canceling">取消中</string>
    <string name="app_downloading">下载中...</string>
    <string name="app_download_finish">下载完成</string>
    
	<string name="app_err_system_busy_tip">系统繁忙，请稍候重试</string>
    <string name="app_err_server_busy_tip">服务器繁忙，请稍后再试</string>
    
    <string name="fmt_http_err" formatted="false">无法连接到服务器(%d,%d)，请检查你的网络或稍后重试</string>
    <string name="fmt_iap_err">网络连接不可用，请稍候重试</string>
    <string name="fmt_search_err" formatted="false">查找失败(%d,%d)</string>
    <string name="fmt_date">M月d日</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_datetime">M月d日 %skk:mm</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_longtime">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_in60min">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="fmt_delcontactmsg_confirm">确定删除和%s的聊天记录吗？</string>
    <string name="fmt_delcontactmsg_confirm_bottle">确定删除来自%s的漂流瓶的聊天记录吗？</string>
    <string name="fmt_delcontactmsg_confirm_group">确定删除群的聊天记录吗？</string>
    <string name="fmt_update">更新</string>
    <string name="fmt_update_info" formatted="false">"版本信息: 
%s
安装包大小: %s</string>
    <string name="fmt_send_err_account_disabled">你已经关闭了帐户%s的消息收发</string>
    
    <string name="settings_about_version">版本</string>
    <string name="settings_update">发布新版本</string>
    <string name="settings_feedback">意见反馈</string>
    <string name="settings_new_version_title">检查到新版本,请确认是否需要下载版本.</string>
    <string name="contact_info_qqsync_intro">使用说明</string>
        
    <string name="empty">Loading images...</string>
    <string name="noTasks">No tasks</string>
    <string name="random">Random</string>
    <string name="correct">Correct</string>
    
    
    <string name="application_name">ActionBarSherlock Styled</string>
    <string name="activity_name">ABS: Styled</string>

    <string name="action_label_refresh">Refresh</string>
    <string name="action_label_search">Search</string>
    <string name="action_label_both">Both</string>
    <string name="action_label_text">Text</string>

    <string name="action_label_logo">Logo</string>
    <string name="action_label_up">Up</string>
    <string name="action_label_nav_tabs">Tabs</string>
    <string name="action_label_nav_drop_down">List</string>
    <string name="action_label_nav_label">Label</string>
    <string name="action_label_nav">Navigation Mode &gt;</string>
    <string name="action_label_bak">Action Bar Background &gt;</string>
    <string name="action_label_bak_none">None</string>
    <string name="action_label_bak_gradient">Gradient</string>
    <string name="action_label_bak_image">Image</string>
	<string name="activity_login_taobao">登录淘宝</string>
    
     <string name="activity_sample_code">ABS: Fragments</string>

    <string name="hello_world"><b>Hello, <i>World!</i></b></string>
    <string name="alert_dialog_two_buttons_title">
        Lorem ipsum dolor sit aie consectetur adipiscing\nPlloaso mako nuto
        siwuf cakso dodtos anr koop.
    </string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    
    <string name="initial_text">Initial text.</string>
    
    <string name="pick_result">Pick a result to send, or BACK to cancel.</string>
    <string name="corky">Corky</string>
    <string name="violet">Violet</string>
    <string name="receive_result_instructions">Press the button to get an activity result, which will be displayed here:</string>
    <string name="receive_result_result">Get Result</string>
    
    <string name="fragment_alert_dialog_support">Alert Dialog</string>

    <string name="fragment_arguments_support">Arguments</string>
    <string name="fragment_arguments_msg">Demonstrates a fragment that takes arguments
        as a Bundle at runtime (on the right) or from attributes in a layout (on the left).</string>
    <string name="fragment_arguments_embedded">From Attributes</string>
    <string name="fragment_arguments_embedded_land">Landscape Only</string>

    <string name="fragment_custom_animation_support">Custom Animation</string>

    <string name="fragment_hide_show_support">Hide and Show</string>

    <string name="fragment_context_menu_support">Context Menu</string>
    <string name="fragment_context_menu_msg">Fragment populating a context
            menu; long press the button to see.</string>
    <string name="long_press">Long press me</string>

    <string name="fragment_dialog_support">Dialog</string>
    <string name="show">Show</string>

    <string name="fragment_dialog_or_activity_support">Dialog or Activity</string>
    <string name="fragment_dialog_or_activity_msg">Demonstrates the same fragment
            being shown as a dialog and embedded inside of an activity.</string>
    <string name="fragment_dialog_or_activity_inline">Fragment embedded inside
            of the activity:</string>

    <string name="fragment_layout_support">Layout</string>

    <string name="fragment_list_array_support">List Array</string>

    <string name="fragment_menu_support">Menu</string>
    <string name="fragment_menu_msg">Build menus from two fragments, allowing
        you to hide them to remove them..</string>
    <string name="fragment1menu">Show fragment 1 menu</string>
    <string name="fragment2menu">Show fragment 2 menu</string>

    <string name="fragment_retain_instance_support">Retain Instance</string>
    <string name="fragment_retain_instance_msg">Current progress of retained fragment;
    restarts if fragment is re-created.</string>
    <string name="restart">Restart</string>

    <string name="fragment_receive_result_support">Receive Result</string>

    <string name="fragment_stack_support">Stack</string>
    <string name="new_fragment">New fragment</string>

    <string name="fragment_tabs">Tabs</string>

    <string name="fragment_tabs_pager">Tabs and Pager</string>

    <string name="fragment_pager_support">Pager</string>
    <string name="first">First</string>
    <string name="last">Last</string>

    <string name="fragment_state_pager_support">State Pager</string>
    
    <string name="attention">注意</string>
    <string name="delete_all">是否要删除这条微博？</string>
    <string name="ok">是</string>
    <string name="cancel">否</string>
    <string name="hello">Hello World, TextActivity!</string>
    <string name="send">发送</string>
    <string name="close">关闭</string>
    <string name="share_dialog_title">新浪微博</string>
    <string name="please_login">请登录！</string>
    <string name="send_sucess">分享成功！</string>
    <string name="send_failed">分享失败！</string>
    <string name="del_pic">是否删除图片？</string>
    
    <string name="label_order">订单管理</string>
    <string name="label_bl">发货管理</string>
    <string name="label_shipping">物流管理</string>
    <string name="label_comment">评价管理</string>
    <string name="label_notification">提醒管理</string>
    <string name="label_setting">系统设置</string>
    <string name="label_showcase">橱窗管理</string>
    <string name="label_production">宝贝管理</string>
    <string name="label_customer">客户服务</string>
      <string name="label_data_chart">数据分析</string>
     <string name="label_sales">营销管理</string>
   
     <string name="label_production_up_">上架</string>
     <string name="label_production_down">下架</string>
     
    <string name="label_wait_payment">等待买家付款</string>
    <string name="label_wait_shipping">待发货</string>
    <string name="label_wait_receive">待签收</string>
    <string name="label_wait_payer_confirm">待回款</string>    
     <string name="label_notifications_title">操作日志</string>
     
     <string name="label_already_shipping">已发货</string>
     <string name="label_done_order">成功订单</string>
     <string name="label_close_order">关闭的订单</string>
     <string name="label_return_payment_order">退款中</string>
     
     <string name="label_for_sales_item">出售中的宝贝</string>
     <string name="label_for_stock_item">仓库中的宝贝</string>
     
     
     <string name="remember_zte">系统提示</string>
    <string name="hint_about_1">版本号：%s</string>
    <string name="hint_about_2">所有权：YH公司</string>
    <string name="hint_about_3">客服电话：0756-3398905</string>
    <string name="do_not_remind_next_time">下次不再显示</string>
    <string name="hint_qqsecure_notify_text">手机管家提醒您</string>
    <string name="loading">正在加载...</string>
    <string name="retry">重试</string>
    <string name="go_on_load">更多...</string>
    <string name="hint_about">"手机管家 %1$s for Android Build%2$s

腾讯公司 版权所有
Copyright © 2012- 2012 yh. All Rights Reserved.

申明：
"</string>
    <string name="hint_about_link">此版本适用于Android平台2.0-2.3及4.0版手机， 如在其他平台的手机上使用本软件，对于出现的任何问题，使用过程中产生的2G/3G等数据流量费用，由运营商收取。本软件的安装使用受%1$s的约束。</string>
    <string name="hint_network_error_text">网络不给力啊，设置一下网络再试试吧(错误代码%1$s)。</string>
    <string name="version_description">新版特性</string>
</resources>